refactoring [*]: replacing deprecated custom FUS validation rule
... + cleanup (minor optimization; typos; formatting)

GitOrigin-RevId: 61a7f6001e7431ca0bc5ba0689c5c8612f4df0c6